--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ APP_ENV=production
 APP_KEY=base64:S8Xl0aBOSAbsGwJvBqiqosBJiIKfnc2oKoUoYzS8dYg=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-# APP_URL=https://localhost:8000
-APP_URL=http://localhost:8000 # For development if image cannot display
+APP_URL=https://localhost:8000
+# APP_URL=http://localhost:8000 # For development if image cannot display
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
